fixed img spacing

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -56,6 +56,7 @@ nav {
 html,
 body {
     height: 100%;
+    width: 100%;
 }
 
 .main-logo {
